frontend/test/should_fail/minmax_004.grg
using attrib_model_001;

rule r {
	ns : NSTRING;
	-es:ESTRING->;

	modify {
		eval {
			ns.a = Math::min(ns.a, es.a);
			ns.a = Math::max(ns.a, es.a);
		}
	}
}

